--- a/cats-generator/src/index.css
+++ b/cats-generator/src/index.css
@@ -8,3 +8,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body {
+  color: #ffffff;
+  background-color: #fab7b7;
+}
