--- a/cats-generator/src/App.css
+++ b/cats-generator/src/App.css
@@ -11,19 +11,27 @@ div {
   align-items: center;
 }
 
-h1, p, button {
+#title {
   text-align: center;
+  text-shadow: 0.15rem 0.15rem 0.15rem #db8d8d;
 }
 
 #catGenerate {
-  padding: .7rem 1.2rem;
+  padding: 0.7rem 1.2rem;
   border: none;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   color: white;
   font-weight: bold;
   background-color: #f59c9c;
-  box-shadow: .15rem .15rem .15rem #ee7979;
-  transition: .5s;
+  box-shadow: 0.15rem 0.15rem 0.1rem #db8d8d;
+  transition: 0.5s;
+}
+
+#catGenerate > p {
+  padding: 0;
+  font-family: "Sour Gummy", serif;
+  font-weight: 500;
+  letter-spacing: 0.05rem;
 }
 
 #catGenerate:hover {
